tests/success/rvalue_member_access.bz
import resource;

struct test_t
{
	.a: complex_resource_t;
	.b: complex_resource_t;
}

function get_value() -> test_t
{
	return test_t();
}

function main()
{
	(consteval {
		let _ = get_value().a;
		get_value().a;
	});
	let _ = get_value().a;
	get_value().a;
}
