tests/error/enum_literal1.bz
enum E
{
	a,
	b,
}

function test()
{
	let _ = .a;
}
